--- a/loans/src/main/resources/application.properties
+++ b/loans/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.mvc.view.suffix:.jsp
 spring.application.name=webapp
 spring.datasource.url=jdbc:h2:file:./Database
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.mail.host=smtp.loans.virtualpairprogrammers.com
+spring.mail.host=smtp.loans.hardikmurdia.com
